--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<a class="header__link" href="#">пункт</a>
 				</li>
 				<li>
-					<a class="header__link" href="#">111</a>
+					<a class="header__link" href="#">поймай меня</a>
 					<ul class="header__sublist">
 						<li>
 							<a href="" class="header__sublink">подпункт</a>
@@ -30,7 +30,7 @@
 							<a href="" class="header__sublink">подпункт</a>
 						</li>
 						<li>
-							<a href="" class="header__sublink">111</a>
+							<a href="" class="header__sublink">а я здесь</a>
 							<ul class="header__2sublist">
 								<li>
 									<a href="#" class="header__2sublink">суперподпункт</a>
@@ -42,10 +42,10 @@
 									<a href="#" class="header__2sublink">суперподпункт</a>
 								</li>
 								<li>
-									<a href="#" class="header__2sublink">111</a>
+									<a href="#" class="header__2sublink">теперь здесь</a>
 									<ul class="header__3sublist">
 										<li>
-											<a href="" class="header__3sublink">суперпуперподпункт</a>
+											<a href="" class="header__3sublink">и здесь</a>
 											<div class="popup">
 												<p>ПОздравляю</p>
 												<P>У тебя получилось :)</P>
